// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`preview, refusals and reports > applied report 1`] = `
"{
  "schemaVersion": 1,
  "command": "uninstall",
  "mode": "applied",
  "paseoBmVersion": "0.1.0",
  "paseo": {
    "cliVersion": "0.8.0",
    "daemonVersion": "0.8.0",
    "home": "<HOME>/.paseo",
    "pluginsEnabled": true
  },
  "actions": [
    {
      "kind": "delete",
      "target": "paseoDaemon/plugins[paseo-bm]",
      "reason": "registered",
      "detail": "paseo plugin remove paseo-bm; Paseo keeps its own empty plugins key and the payload directory is removed below"
    },
    {
      "kind": "config",
      "target": "paseoHome/config.json#agents.providers.bm-manager",
      "reason": "owned-by-paseo-bm",
      "from": {
        "extends": "claude",
        "label": "Beads Manager",
        "paseoTools": true
      },
      "to": null
    },
    {
      "kind": "config",
      "target": "paseoHome/config.json#agents.providers.bm-worker",
      "reason": "owned-by-paseo-bm",
      "from": {
        "extends": "codex",
        "label": "Beads Worker",
        "paseoTools": true
      },
      "to": null
    },
    {
      "kind": "config",
      "target": "paseoHome/config.json#agents.providers.bm-reviewer",
      "reason": "owned-by-paseo-bm",
      "from": {
        "extends": "codex",
        "label": "Beads Reviewer"
      },
      "to": null
    },
    {
      "kind": "config",
      "target": "paseoHome/config.json#daemon.agentProfiles[bm-manager]",
      "reason": "owned-by-paseo-bm",
      "from": {
        "id": "bm-manager",
        "provider": "bm-manager",
        "model": "claude-opus-5"
      },
      "to": null
    },
    {
      "kind": "config",
      "target": "paseoHome/config.json#daemon.agentProfiles[bm-worker]",
      "reason": "owned-by-paseo-bm",
      "from": {
        "id": "bm-worker",
        "provider": "bm-worker",
        "model": "gpt-5.6-sol"
      },
      "to": null
    },
    {
      "kind": "config",
      "target": "paseoHome/config.json#daemon.agentProfiles[bm-reviewer]",
      "reason": "owned-by-paseo-bm",
      "from": {
        "id": "bm-reviewer",
        "provider": "bm-reviewer",
        "model": "gpt-5.6-sol"
      },
      "to": null
    },
    {
      "kind": "config",
      "target": "paseoHome/config.json#daemon.mcp.injectIntoAgents",
      "reason": "restore-previous",
      "from": true,
      "to": null,
      "detail": "the key did not exist before paseo-bm, so it is removed"
    },
    {
      "kind": "keep",
      "target": "paseoHome/config.json#pluginsEnabled",
      "reason": "not-set-by-paseo-bm",
      "detail": "paseo-bm did not turn plugins on, so the switch is left as it is"
    },
    {
      "kind": "delete",
      "target": "installHome/plugin/0.1.0/index.server.js",
      "reason": "unchanged"
    },
    {
      "kind": "delete",
      "target": "installHome/plugin/0.1.0/paseo-plugin.json",
      "reason": "unchanged"
    },
    {
      "kind": "delete",
      "target": "installHome/plugin/0.1.0/roles/worker.md",
      "reason": "unchanged"
    },
    {
      "kind": "delete",
      "target": "installHome/plugin/0.1.0",
      "reason": "payload-version"
    },
    {
      "kind": "keep",
      "target": "installHome/backups/20260915T101500Z",
      "reason": "kept-by-choice",
      "detail": "backup taken 2026-09-15T10:15:00.000Z (paseo-config)"
    },
    {
      "kind": "delete",
      "target": "installHome/install.json",
      "reason": "record"
    }
  ],
  "roles": [
    {
      "role": "manager",
      "provider": "claude",
      "model": "claude-opus-5",
      "paseoTools": true,
      "loggedIn": null
    },
    {
      "role": "worker",
      "provider": "codex",
      "model": "gpt-5.6-sol",
      "paseoTools": true,
      "loggedIn": null
    },
    {
      "role": "reviewer",
      "provider": "codex",
      "model": "gpt-5.6-sol",
      "paseoTools": false,
      "loggedIn": null
    }
  ],
  "skills": null,
  "warnings": [],
  "result": {
    "exitCode": 0,
    "pluginState": null
  }
}
"
`;

exports[`preview, refusals and reports > previews without a terminal and without --apply: exit 6, nothing written, nothing run but read-only calls 1`] = `
"{
  "schemaVersion": 1,
  "command": "uninstall",
  "mode": "preview",
  "paseoBmVersion": "0.1.0",
  "paseo": {
    "cliVersion": "0.8.0",
    "daemonVersion": "0.8.0",
    "home": "<HOME>/.paseo",
    "pluginsEnabled": true
  },
  "actions": [
    {
      "kind": "delete",
      "target": "paseoDaemon/plugins[paseo-bm]",
      "reason": "registered",
      "detail": "paseo plugin remove paseo-bm; Paseo keeps its own empty plugins key and the payload directory is removed below"
    },
    {
      "kind": "config",
      "target": "paseoHome/config.json#agents.providers.bm-manager",
      "reason": "owned-by-paseo-bm",
      "from": {
        "extends": "claude",
        "label": "Beads Manager",
        "paseoTools": true
      },
      "to": null
    },
    {
      "kind": "config",
      "target": "paseoHome/config.json#agents.providers.bm-worker",
      "reason": "owned-by-paseo-bm",
      "from": {
        "extends": "codex",
        "label": "Beads Worker",
        "paseoTools": true
      },
      "to": null
    },
    {
      "kind": "config",
      "target": "paseoHome/config.json#agents.providers.bm-reviewer",
      "reason": "owned-by-paseo-bm",
      "from": {
        "extends": "codex",
        "label": "Beads Reviewer"
      },
      "to": null
    },
    {
      "kind": "config",
      "target": "paseoHome/config.json#daemon.agentProfiles[bm-manager]",
      "reason": "owned-by-paseo-bm",
      "from": {
        "id": "bm-manager",
        "provider": "bm-manager",
        "model": "claude-opus-5"
      },
      "to": null
    },
    {
      "kind": "config",
      "target": "paseoHome/config.json#daemon.agentProfiles[bm-worker]",
      "reason": "owned-by-paseo-bm",
      "from": {
        "id": "bm-worker",
        "provider": "bm-worker",
        "model": "gpt-5.6-sol"
      },
      "to": null
    },
    {
      "kind": "config",
      "target": "paseoHome/config.json#daemon.agentProfiles[bm-reviewer]",
      "reason": "owned-by-paseo-bm",
      "from": {
        "id": "bm-reviewer",
        "provider": "bm-reviewer",
        "model": "gpt-5.6-sol"
      },
      "to": null
    },
    {
      "kind": "config",
      "target": "paseoHome/config.json#daemon.mcp.injectIntoAgents",
      "reason": "restore-previous",
      "from": true,
      "to": null,
      "detail": "the key did not exist before paseo-bm, so it is removed"
    },
    {
      "kind": "keep",
      "target": "paseoHome/config.json#pluginsEnabled",
      "reason": "not-set-by-paseo-bm",
      "detail": "paseo-bm did not turn plugins on, so the switch is left as it is"
    },
    {
      "kind": "delete",
      "target": "installHome/plugin/0.1.0/index.server.js",
      "reason": "unchanged"
    },
    {
      "kind": "delete",
      "target": "installHome/plugin/0.1.0/paseo-plugin.json",
      "reason": "unchanged"
    },
    {
      "kind": "delete",
      "target": "installHome/plugin/0.1.0/roles/worker.md",
      "reason": "unchanged"
    },
    {
      "kind": "delete",
      "target": "installHome/plugin/0.1.0",
      "reason": "payload-version"
    },
    {
      "kind": "keep",
      "target": "installHome/backups/20260915T101500Z",
      "reason": "kept-by-choice",
      "detail": "backup taken 2026-09-15T10:15:00.000Z (paseo-config)"
    },
    {
      "kind": "delete",
      "target": "installHome/install.json",
      "reason": "record"
    }
  ],
  "roles": [
    {
      "role": "manager",
      "provider": "claude",
      "model": "claude-opus-5",
      "paseoTools": true,
      "loggedIn": null
    },
    {
      "role": "worker",
      "provider": "codex",
      "model": "gpt-5.6-sol",
      "paseoTools": true,
      "loggedIn": null
    },
    {
      "role": "reviewer",
      "provider": "codex",
      "model": "gpt-5.6-sol",
      "paseoTools": false,
      "loggedIn": null
    }
  ],
  "skills": null,
  "warnings": [],
  "result": {
    "exitCode": 6,
    "pluginState": "running"
  }
}
"
`;
